pcc.output
Gramática

    0 $accept: prog $end

    1 prog: progelem
    2     | prog progelem

    3 progelem: statement '\n'
    4         | '\n'

    5 statement: IDENT '=' expr ';'
    6          | WRITE '(' IDENT ')' ';'
    7          | WRITE '(' STR ')' ';'
    8          | WRITE '(' STR ',' expr ')' ';'
    9          | READ '(' IDENT ')' ';'
   10          | READ '(' STR ',' IDENT ')' ';'
   11          | WHILE '(' expr ')' '{' block '}'
   12          | IF '(' expr ')' '{' block '}'
   13          | IF '(' expr ')' '{' block '}' ELSE '{' block '}'
   14          | ';'

   15 block: statement
   16      | '\n'
   17      | block statement
   18      | block '\n'

   19 expr: expr OR expr
   20     | expr AND expr
   21     | expr EQ expr
   22     | expr NE expr
   23     | expr LE expr
   24     | expr GE expr
   25     | expr '<' expr
   26     | expr '>' expr
   27     | expr '+' expr
   28     | expr '-' expr
   29     | expr '*' expr
   30     | expr '/' expr
   31     | expr '^' expr
   32     | expr '%' expr
   33     | '!' expr
   34     | '+' expr
   35     | '-' expr
   36     | '(' expr ')'
   37     | FLOAT
   38     | IDENT
   39     | SIN '(' expr ')'
   40     | ASIN '(' expr ')'
   41     | COS '(' expr ')'
   42     | ACOS '(' expr ')'
   43     | TAN '(' expr ')'
   44     | ATAN '(' expr ')'
   45     | EXP '(' expr ')'
   46     | LOG '(' expr ')'
   47     | LOG10 '(' expr ')'
   48     | CEIL '(' expr ')'
   49     | FLOOR '(' expr ')'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 16 18
'!' (33) 33
'%' (37) 32
'(' (40) 6 7 8 9 10 11 12 13 36 39 40 41 42 43 44 45 46 47 48 49
')' (41) 6 7 8 9 10 11 12 13 36 39 40 41 42 43 44 45 46 47 48 49
'*' (42) 29
'+' (43) 27 34
',' (44) 8 10
'-' (45) 28 35
'/' (47) 30
';' (59) 5 6 7 8 9 10 14
'<' (60) 25
'=' (61) 5
'>' (62) 26
'^' (94) 31
'{' (123) 11 12 13
'}' (125) 11 12 13
error (256)
EQ (258) 21
NE (259) 22
LE (260) 23
GE (261) 24
OR (262) 19
AND (263) 20
UNOP (264)
IDENT (265) 5 6 9 10 38
SIN (266) 39
ASIN (267) 40
COS (268) 41
ACOS (269) 42
TAN (270) 43
ATAN (271) 44
EXP (272) 45
LOG (273) 46
LOG10 (274) 47
CEIL (275) 48
FLOOR (276) 49
WRITE (277) 6 7 8
READ (278) 9 10
WHILE (279) 11
IF (280) 12 13
ELSE (281) 13
FLOAT (282) 37
STR (283) 7 8 10


No terminales con las reglas donde aparecen

$accept (46)
    en la izquierda: 0
prog (47)
    en la izquierda: 1 2, en la derecha: 0 2
progelem (48)
    en la izquierda: 3 4, en la derecha: 1 2
statement (49)
    en la izquierda: 5 6 7 8 9 10 11 12 13 14, en la derecha: 3 15
    17
block (50)
    en la izquierda: 15 16 17 18, en la derecha: 11 12 13 17 18
expr (51)
    en la izquierda: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43 44 45 46 47 48 49, en la derecha: 5
    8 11 12 13 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    39 40 41 42 43 44 45 46 47 48 49


Estado 0

    0 $accept: . prog $end

    IDENT  desplazar e ir al estado 1
    WRITE  desplazar e ir al estado 2
    READ   desplazar e ir al estado 3
    WHILE  desplazar e ir al estado 4
    IF     desplazar e ir al estado 5
    '\n'   desplazar e ir al estado 6
    ';'    desplazar e ir al estado 7

    prog       ir al estado 8
    progelem   ir al estado 9
    statement  ir al estado 10


Estado 1

    5 statement: IDENT . '=' expr ';'

    '='  desplazar e ir al estado 11


Estado 2

    6 statement: WRITE . '(' IDENT ')' ';'
    7          | WRITE . '(' STR ')' ';'
    8          | WRITE . '(' STR ',' expr ')' ';'

    '('  desplazar e ir al estado 12


Estado 3

    9 statement: READ . '(' IDENT ')' ';'
   10          | READ . '(' STR ',' IDENT ')' ';'

    '('  desplazar e ir al estado 13


Estado 4

   11 statement: WHILE . '(' expr ')' '{' block '}'

    '('  desplazar e ir al estado 14


Estado 5

   12 statement: IF . '(' expr ')' '{' block '}'
   13          | IF . '(' expr ')' '{' block '}' ELSE '{' block '}'

    '('  desplazar e ir al estado 15


Estado 6

    4 progelem: '\n' .

    $default  reduce usando la regla 4 (progelem)


Estado 7

   14 statement: ';' .

    $default  reduce usando la regla 14 (statement)


Estado 8

    0 $accept: prog . $end
    2 prog: prog . progelem

    $end   desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 1
    WRITE  desplazar e ir al estado 2
    READ   desplazar e ir al estado 3
    WHILE  desplazar e ir al estado 4
    IF     desplazar e ir al estado 5
    '\n'   desplazar e ir al estado 6
    ';'    desplazar e ir al estado 7

    progelem   ir al estado 17
    statement  ir al estado 10


Estado 9

    1 prog: progelem .

    $default  reduce usando la regla 1 (prog)


Estado 10

    3 progelem: statement . '\n'

    '\n'  desplazar e ir al estado 18


Estado 11

    5 statement: IDENT '=' . expr ';'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 36


Estado 12

    6 statement: WRITE '(' . IDENT ')' ';'
    7          | WRITE '(' . STR ')' ';'
    8          | WRITE '(' . STR ',' expr ')' ';'

    IDENT  desplazar e ir al estado 37
    STR    desplazar e ir al estado 38


Estado 13

    9 statement: READ '(' . IDENT ')' ';'
   10          | READ '(' . STR ',' IDENT ')' ';'

    IDENT  desplazar e ir al estado 39
    STR    desplazar e ir al estado 40


Estado 14

   11 statement: WHILE '(' . expr ')' '{' block '}'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 41


Estado 15

   12 statement: IF '(' . expr ')' '{' block '}'
   13          | IF '(' . expr ')' '{' block '}' ELSE '{' block '}'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 42


Estado 16

    0 $accept: prog $end .

    $default  aceptar


Estado 17

    2 prog: prog progelem .

    $default  reduce usando la regla 2 (prog)


Estado 18

    3 progelem: statement '\n' .

    $default  reduce usando la regla 3 (progelem)


Estado 19

   34 expr: '+' . expr

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 43


Estado 20

   35 expr: '-' . expr

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 44


Estado 21

   33 expr: '!' . expr

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 45


Estado 22

   38 expr: IDENT .

    $default  reduce usando la regla 38 (expr)


Estado 23

   39 expr: SIN . '(' expr ')'

    '('  desplazar e ir al estado 46


Estado 24

   40 expr: ASIN . '(' expr ')'

    '('  desplazar e ir al estado 47


Estado 25

   41 expr: COS . '(' expr ')'

    '('  desplazar e ir al estado 48


Estado 26

   42 expr: ACOS . '(' expr ')'

    '('  desplazar e ir al estado 49


Estado 27

   43 expr: TAN . '(' expr ')'

    '('  desplazar e ir al estado 50


Estado 28

   44 expr: ATAN . '(' expr ')'

    '('  desplazar e ir al estado 51


Estado 29

   45 expr: EXP . '(' expr ')'

    '('  desplazar e ir al estado 52


Estado 30

   46 expr: LOG . '(' expr ')'

    '('  desplazar e ir al estado 53


Estado 31

   47 expr: LOG10 . '(' expr ')'

    '('  desplazar e ir al estado 54


Estado 32

   48 expr: CEIL . '(' expr ')'

    '('  desplazar e ir al estado 55


Estado 33

   49 expr: FLOOR . '(' expr ')'

    '('  desplazar e ir al estado 56


Estado 34

   37 expr: FLOAT .

    $default  reduce usando la regla 37 (expr)


Estado 35

   36 expr: '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 57


Estado 36

    5 statement: IDENT '=' expr . ';'
   19 expr: expr . OR expr
   20     | expr . AND expr
   21     | expr . EQ expr
   22     | expr . NE expr
   23     | expr . LE expr
   24     | expr . GE expr
   25     | expr . '<' expr
   26     | expr . '>' expr
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '^' expr
   32     | expr . '%' expr

    EQ   desplazar e ir al estado 58
    NE   desplazar e ir al estado 59
    LE   desplazar e ir al estado 60
    GE   desplazar e ir al estado 61
    '<'  desplazar e ir al estado 62
    '>'  desplazar e ir al estado 63
    OR   desplazar e ir al estado 64
    AND  desplazar e ir al estado 65
    '+'  desplazar e ir al estado 66
    '-'  desplazar e ir al estado 67
    '*'  desplazar e ir al estado 68
    '/'  desplazar e ir al estado 69
    '%'  desplazar e ir al estado 70
    '^'  desplazar e ir al estado 71
    ';'  desplazar e ir al estado 72


Estado 37

    6 statement: WRITE '(' IDENT . ')' ';'

    ')'  desplazar e ir al estado 73


Estado 38

    7 statement: WRITE '(' STR . ')' ';'
    8          | WRITE '(' STR . ',' expr ')' ';'

    ')'  desplazar e ir al estado 74
    ','  desplazar e ir al estado 75


Estado 39

    9 statement: READ '(' IDENT . ')' ';'

    ')'  desplazar e ir al estado 76


Estado 40

   10 statement: READ '(' STR . ',' IDENT ')' ';'

    ','  desplazar e ir al estado 77


Estado 41

   11 statement: WHILE '(' expr . ')' '{' block '}'
   19 expr: expr . OR expr
   20     | expr . AND expr
   21     | expr . EQ expr
   22     | expr . NE expr
   23     | expr . LE expr
   24     | expr . GE expr
   25     | expr . '<' expr
   26     | expr . '>' expr
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '^' expr
   32     | expr . '%' expr

    EQ   desplazar e ir al estado 58
    NE   desplazar e ir al estado 59
    LE   desplazar e ir al estado 60
    GE   desplazar e ir al estado 61
    '<'  desplazar e ir al estado 62
    '>'  desplazar e ir al estado 63
    OR   desplazar e ir al estado 64
    AND  desplazar e ir al estado 65
    '+'  desplazar e ir al estado 66
    '-'  desplazar e ir al estado 67
    '*'  desplazar e ir al estado 68
    '/'  desplazar e ir al estado 69
    '%'  desplazar e ir al estado 70
    '^'  desplazar e ir al estado 71
    ')'  desplazar e ir al estado 78


Estado 42

   12 statement: IF '(' expr . ')' '{' block '}'
   13          | IF '(' expr . ')' '{' block '}' ELSE '{' block '}'
   19 expr: expr . OR expr
   20     | expr . AND expr
   21     | expr . EQ expr
   22     | expr . NE expr
   23     | expr . LE expr
   24     | expr . GE expr
   25     | expr . '<' expr
   26     | expr . '>' expr
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '^' expr
   32     | expr . '%' expr

    EQ   desplazar e ir al estado 58
    NE   desplazar e ir al estado 59
    LE   desplazar e ir al estado 60
    GE   desplazar e ir al estado 61
    '<'  desplazar e ir al estado 62
    '>'  desplazar e ir al estado 63
    OR   desplazar e ir al estado 64
    AND  desplazar e ir al estado 65
    '+'  desplazar e ir al estado 66
    '-'  desplazar e ir al estado 67
    '*'  desplazar e ir al estado 68
    '/'  desplazar e ir al estado 69
    '%'  desplazar e ir al estado 70
    '^'  desplazar e ir al estado 71
    ')'  desplazar e ir al estado 79


Estado 43

   19 expr: expr . OR expr
   20     | expr . AND expr
   21     | expr . EQ expr
   22     | expr . NE expr
   23     | expr . LE expr
   24     | expr . GE expr
   25     | expr . '<' expr
   26     | expr . '>' expr
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '^' expr
   32     | expr . '%' expr
   34     | '+' expr .

    $default  reduce usando la regla 34 (expr)


Estado 44

   19 expr: expr . OR expr
   20     | expr . AND expr
   21     | expr . EQ expr
   22     | expr . NE expr
   23     | expr . LE expr
   24     | expr . GE expr
   25     | expr . '<' expr
   26     | expr . '>' expr
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '^' expr
   32     | expr . '%' expr
   35     | '-' expr .

    $default  reduce usando la regla 35 (expr)


Estado 45

   19 expr: expr . OR expr
   20     | expr . AND expr
   21     | expr . EQ expr
   22     | expr . NE expr
   23     | expr . LE expr
   24     | expr . GE expr
   25     | expr . '<' expr
   26     | expr . '>' expr
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '^' expr
   32     | expr . '%' expr
   33     | '!' expr .

    $default  reduce usando la regla 33 (expr)


Estado 46

   39 expr: SIN '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 80


Estado 47

   40 expr: ASIN '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 81


Estado 48

   41 expr: COS '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 82


Estado 49

   42 expr: ACOS '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 83


Estado 50

   43 expr: TAN '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 84


Estado 51

   44 expr: ATAN '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 85


Estado 52

   45 expr: EXP '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 86


Estado 53

   46 expr: LOG '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 87


Estado 54

   47 expr: LOG10 '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 88


Estado 55

   48 expr: CEIL '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 89


Estado 56

   49 expr: FLOOR '(' . expr ')'

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 90


Estado 57

   19 expr: expr . OR expr
   20     | expr . AND expr
   21     | expr . EQ expr
   22     | expr . NE expr
   23     | expr . LE expr
   24     | expr . GE expr
   25     | expr . '<' expr
   26     | expr . '>' expr
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '^' expr
   32     | expr . '%' expr
   36     | '(' expr . ')'

    EQ   desplazar e ir al estado 58
    NE   desplazar e ir al estado 59
    LE   desplazar e ir al estado 60
    GE   desplazar e ir al estado 61
    '<'  desplazar e ir al estado 62
    '>'  desplazar e ir al estado 63
    OR   desplazar e ir al estado 64
    AND  desplazar e ir al estado 65
    '+'  desplazar e ir al estado 66
    '-'  desplazar e ir al estado 67
    '*'  desplazar e ir al estado 68
    '/'  desplazar e ir al estado 69
    '%'  desplazar e ir al estado 70
    '^'  desplazar e ir al estado 71
    ')'  desplazar e ir al estado 91


Estado 58

   21 expr: expr EQ . expr

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 92


Estado 59

   22 expr: expr NE . expr

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 93


Estado 60

   23 expr: expr LE . expr

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 94


Estado 61

   24 expr: expr GE . expr

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 95


Estado 62

   25 expr: expr '<' . expr

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 96


Estado 63

   26 expr: expr '>' . expr

    '+'    desplazar e ir al estado 19
    '-'    desplazar e ir al estado 20
    '!'    desplazar e ir al estado 21
    IDENT  desplazar e ir al estado 22
    SIN    desplazar e ir al estado 23
    ASIN   desplazar e ir al estado 24
    COS    desplazar e ir al estado 25
    ACOS   desplazar e ir al estado 26
    TAN    desplazar e ir al estado 27
    ATAN   desplazar e ir al estado 28
    EXP    desplazar e ir al estado 29
    LOG    desplazar e ir al estado 30
    LOG10  desplazar e ir al estado 31
    CEIL   desplazar e ir al estado 32
    FLOOR  desplazar e ir al estado 33
    FLOAT  desplazar e ir al estado 34
    '('    desplazar e ir al estado 35

    expr  ir al estado 97


Estado 64

   19 expr: expr OR . expr
